# timew-projects

./: .gitignore  pyproject.toml
timew_projects/: from_csv.py  projects_sum.py
