[tool.poetry]
name = "timew_projects"
version = "0.1.2"
description = ""
authors = ["Alessandro Giugno <alessandro.giugno@gmx.de>"]
readme = "README.md"

# packages = [
#     { include = "timew_projects" },
# ]

[tool.poetry.dependencies]
python = "^3.12"
timew = "^0.1.1"
timew-report = "^1.4.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
